recursion.lessons.recursion.koch.Koch.scala.error
Koch:18: error: ')' expected but ';' found.
		snowSide(levels-1,length/(3*levels);
                                                   ^Koch:21: error: ')' expected but ';' found.
		snowSide(levels-1,length/(3*levels);
                                                   ^Koch:24: error: ')' expected but ';' found.
		snowSide(levels-1,length/(3*levels);
                                                   ^